test/source/carehub/main/default/objects/CareOrganizationContractRelation__c/CareOrganizationContractRelation__c.object-meta.xml
<CustomObject>
    <description>The b2b relation between 2 care organization</description>
    <label>Care Organization Contract Relation</label>
    <nameField>
        <label>Care Organization Contract Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Care Organization Contract Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>