test/source/carehub/main/default/objects/CareOrganizationContractRelation__c/fields/CounterPartyAccount__c.field-meta.xml
<CustomField>
    <fullName>CounterPartyAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Counter Party Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Care Organization Contract Relations Counter Party Account</relationshipLabel>
    <relationshipName>CareOrganizationContractRelationsCounter</relationshipName>
    <type>Lookup</type>
</CustomField>