test/source/carehub/main/default/objects/CareOrganizationContractRelation__c/fields/DirectContract__c.field-meta.xml
<CustomField>
    <fullName>DirectContract__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this contract is in direct relation with the counterparty care organization or not</description>
    <label>Direct Contract</label>
    <type>Checkbox</type>
</CustomField>