test/source/carehub/main/default/objects/CareOrganizationContractRelation__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The contract is considered invalid after this date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>