test/source/carehub/main/default/objects/CareOrganizationContractRelation__c/fields/MainAccount__c.field-meta.xml
<CustomField>
    <fullName>MainAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Main Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Care Organization Contract Relation Main Account</relationshipLabel>
    <relationshipName>CareOrganizationContractRelationsMain</relationshipName>
    <type>Lookup</type>
</CustomField>